--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.3.2",
+    "@thi.ng/fuzzy-viz": "^2.1.10",
     "parcel": "^2.3.2",
     "parcel-transformer-transcrypt": "^0.1.4"
   },
